cabal-version: 3.0
name: pact-crypto
version: 0.1.0.0
synopsis: Pact Crypto
description: Hash functions for the Pact smart contract language
homepage: https://github.com/kadena-io/pact-crypto
bug-reports: https://github.com/kadena-io/pact-crypto/issues
license: BSD-3-Clause
license-file: LICENSE
author: Robert Soeldner
maintainer: robert@kadena.io
copyright: Copyright (C) 2023 Kadena LLC.
category: Language
build-type: Simple

extra-source-files:
    README.md
    CHANGELOG.md

-- -------------------------------------------------------------------------- --
-- Internal Libraries

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Pact.Crypto.Types
    Pact.Crypto.Hash
    Pact.Crypto.Hash.Blake2
    Pact.Crypto.Hash.Sha2
    Pact.Crypto.Hash.Sha3
    Pact.Crypto.Hash.Keccak
  build-depends:
    , base <5
    , bytestring >=0.10
    , hashes >=0.2

-- test-suite json-tests
--   main-is: Main.hs
--   type: exitcode-stdio-1.0
--   hs-source-dirs: test
--   default-language: Haskell2010
--   ghc-options: -Wall -threaded -rtsopts
--   other-modules:
--     Test.Pact.JSON.Encode
--     Test.Pact.JSON.Legacy.Hashable
--     Test.Pact.JSON.Legacy.HashMap
--   build-depends:
--     -- internal
--     , pact-json

--     -- external
--     , QuickCheck >=2.14
--     , aeson >=2.0
--     , base <5
--     , hashable >=1.4
--     , hspec >=2.10
--     , quickcheck-instances >=0.3
--     , scientific >=0.3
--     , text >=2.0
--     , unordered-containers >=0.2.16

test-suite tests
  main-is: Tests.hs
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:
    , base
    , tasty
    , tasty-quickcheck
    , QuickCheck
    , bytestring
    , process
    , pact-crypto
